--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "vue-template-compiler": "^2.5.21"
   },
   "resolutions": {
-    "kind-of": "^6.0.3"
+    "kind-of": "^6.0.3",
+    "acorn": "^6.4.1",
+    "minimist": "^0.2.1"
   }
 }
